# Bayesian-DSmT-Fusion-Neutrosophic

./: .gitignore  Cargo.toml  README.md  REPRODUCIBILITY.md  data.xlsx  primary_input_contract.md  refined_outline.md
bayesdsm-cli/: Cargo.toml
bayesdsm-cli/src/: main.rs
bayesdsm-core/: Cargo.toml
bayesdsm-core/src/: db.rs  error.rs  lib.rs
bayesdsm-core/src/audit/: failure_rules.rs  hashing.rs  mod.rs  run_manifest.rs
bayesdsm-core/src/bayes/: burden.rs  diagnostics.rs  dirichlet_source.rs  hotspot_latent.rs  lognormal_enrichment.rs  mcmc.rs  mod.rs  posterior_summary.rs
bayesdsm-core/src/belief/: focal_elements.rs  mod.rs  posterior_to_belief.rs
bayesdsm-core/src/clean/: mod.rs  nondetect.rs  units.rs
bayesdsm-core/src/dsmt/: canonicalize.rs  expression.rs  free_model.rs  fusion.rs  hybrid_model.rs  mod.rs  pignistic.rs
bayesdsm-core/src/export/: mod.rs
bayesdsm-core/src/features/: contamination_factor.rs  enrichment_factor.rs  igeo.rs  mod.rs  normalize.rs  pli.rs
bayesdsm-core/src/ingest/: csv_read.rs  mod.rs  sqlite_insert.rs  validate.rs
bayesdsm-core/src/math/: linalg.rs  mod.rs  stats.rs
bayesdsm-core/src/neutrosophic/: criterion_score.rs  membership.rs  mod.rs  uncertainty.rs
bayesdsm-core/src/schema/: 0001_init.sql  0002_views.sql  mod.rs
bayesdsm-core/src/validate/: mod.rs
bayesdsm-core/tests/: e2e.rs
docs/: cli.md  mapping.md  sql_schema.md
input_csvs/: allowed_values.csv  background_values.csv  confidence_indicators.csv  config_parameters.csv  data_dictionary.csv  dsmt_constraints.csv  dsmt_hypotheses.csv  exposure_indicators.csv  leakage_rules.csv  metal_concentrations.csv  sampling_events.csv  site_metadata.csv  (+3 more)
(+17 files in other folders)
