[workspace]
resolver = "2"
members = ["bayesdsm-core", "bayesdsm-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bayesian-DSmT-Neutrosophic sediment-metal hotspot prioritization (Rust + SQLite)."

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
